tests/ui/traits/const-traits/no-explicit-const-params.stderr
error[E0107]: function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/no-explicit-const-params.rs:14:5
   |
LL |     foo::<true>();
   |     ^^^-------- help: remove the unnecessary generics
   |     |
   |     expected 0 generic arguments
   |
note: function defined here, with 0 generic parameters
  --> $DIR/no-explicit-const-params.rs:3:10
   |
LL | const fn foo() {}
   |          ^^^

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/no-explicit-const-params.rs:16:12
   |
LL |     <() as Bar<true>>::bar();
   |            ^^^------ help: remove the unnecessary generics
   |            |
   |            expected 0 generic arguments
   |
note: trait defined here, with 0 generic parameters
  --> $DIR/no-explicit-const-params.rs:5:13
   |
LL | const trait Bar {
   |             ^^^

error[E0107]: function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/no-explicit-const-params.rs:21:5
   |
LL |     foo::<false>();
   |     ^^^--------- help: remove the unnecessary generics
   |     |
   |     expected 0 generic arguments
   |
note: function defined here, with 0 generic parameters
  --> $DIR/no-explicit-const-params.rs:3:10
   |
LL | const fn foo() {}
   |          ^^^

error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/no-explicit-const-params.rs:23:12
   |
LL |     <() as Bar<false>>::bar();
   |            ^^^------- help: remove the unnecessary generics
   |            |
   |            expected 0 generic arguments
   |
note: trait defined here, with 0 generic parameters
  --> $DIR/no-explicit-const-params.rs:5:13
   |
LL | const trait Bar {
   |             ^^^

error[E0277]: the trait bound `(): const Bar` is not satisfied
  --> $DIR/no-explicit-const-params.rs:23:6
   |
LL |     <() as Bar<false>>::bar();
   |      ^^
   |
help: make the `impl` of trait `Bar` `const`
   |
LL | impl const Bar for () {
   |      +++++

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0107, E0277.
For more information about an error, try `rustc --explain E0107`.
